--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>rang.games</groupId>
     <artifactId>ContentsBagAPI</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>ContentsBagAPI</name>
@@ -66,6 +66,17 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.21.1-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>rang.games</groupId>
+            <artifactId>allplayersutil</artifactId>
+            <version>2.0.4.4-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
