--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,6 @@
 name: ContentsBagAPI
-version: '1.0-SNAPSHOT'
+version: ${project.version}
 main: rang.games.contentsBagAPI.ContentPlugin
 api-version: '1.21'
+depend:
+  - AllPlayersUtil
