feat(pom.xml): update version and dependencies for improved functionality
- Bump version from 1.0.3-SNAPSHOT to 1.0.6-SNAPSHOT for release.
- Update dependency groupId for allplayersutil from rang.games to games.rang.
- Change allplayersutil version from 2.0.4.4-SNAPSHOT to 2.0.4.7-SNAPSHOT.
- Set allplayersutil scope to system and add systemPath.
- Add new dependency LangUtils with version 1.10 and systemPath.
- Update plugin.yml to include LangUtils as a dependency.
- Enhance ContentItem to resolve item names and types during initialization.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>rang.games</groupId>
     <artifactId>ContentsBagAPI</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.6-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>ContentsBagAPI</name>
@@ -78,10 +78,18 @@
             <version>5.1.0</version>
         </dependency>
         <dependency>
-            <groupId>rang.games</groupId>
+            <groupId>games.rang</groupId>
             <artifactId>allplayersutil</artifactId>
-            <version>2.0.4.4-SNAPSHOT</version>
-            <scope>provided</scope>
+            <version>2.0.4.7-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/allplayersutil-2.0.4.7-SNAPSHOT.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>games.rang</groupId>
+            <artifactId>LangUtils</artifactId>
+            <version>1.10</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/LangUtils-1.10.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.github.SkriptLang</groupId>
